# dynamic_qr

./: .flaskenv  .gitignore  README.md  app.py  config.py  pyproject.toml
deployment/: dynamic_qr  dynamic_qr.conf
dynamic_qr/: __init__.py  errors.py  forms.py  models.py  routes.py
dynamic_qr/static/: style.css
dynamic_qr/templates/: 404.html  500.html  _pagination.html  account.html  base.html  home.html  login.html
tests/: qr_test.py
