[tool.poetry]
name = "dynamic_qr"
version = "0.1.0"
description = ""
authors = ["CommandReverse <jelted@hotmail.nl>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
qrcode = "^6.1"
flask-sqlalchemy = "^2.4.4"
flask-migrate = "^2.5.3"
flask-wtf = "^0.14.3"
flask-login = "^0.5.0"
email_validator = "^1.1.2"
python-dotenv = "^0.15.0"
pillow = "^8.0.1"
gunicorn = "^20.0.4"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
